data/derived/comb/progs/unify/prog7210.ml.out
Characters 116-117:
  let s = x1 + x2 + a in
                    ^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
